add open router with healthcheck

--- a/env.example
+++ b/env.example
@@ -5,6 +5,12 @@ NODE_ENV=development
 # ElevenLabs Configuration
 ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
 
+# OpenRouter Configuration
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+OPENROUTER_DEFAULT_MODEL=meta-llama/llama-3.1-8b-instruct:free
+OPENROUTER_SITE_URL=https://your-site.com
+OPENROUTER_SITE_NAME=Your Site Name
+
 # Supabase Configuration
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
