--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "openai": "^5.3.0",
     "winston": "^3.11.0",
     "zod": "^3.22.4"
   },
