--- a/env.example
+++ b/env.example
@@ -8,8 +8,19 @@ ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
 # OpenRouter Configuration
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 OPENROUTER_DEFAULT_MODEL=meta-llama/llama-3.1-8b-instruct:free
+OPENROUTER_FALLBACK_MODELS=meta-llama/llama-3.1-70b-instruct:free,google/gemma-2-9b-it:free
 OPENROUTER_SITE_URL=https://your-site.com
 OPENROUTER_SITE_NAME=Your Site Name
+
+# Model Configuration
+MODEL_MAX_TOKENS=4000
+MODEL_TEMPERATURE=0.7
+MODEL_RETRY_ATTEMPTS=3
+MODEL_RETRY_DELAY_MS=1000
+
+# Cost Tracking (ENABLED by default for production monitoring)
+COST_TRACKING_ENABLED=true
+COST_ALERT_THRESHOLD=10.0  # USD threshold for cost alerts
 
 # Supabase Configuration
 SUPABASE_URL=https://your-project.supabase.co
