--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "start": "NODE_ENV=production node dist/server.js",
     "test": "jest",
     "lint": "eslint src/**/*.ts",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "ingest-jung": "tsx src/scripts/ingest-jung-texts.ts",
+    "ingest-jung-optimized": "node --expose-gc -r tsx/cjs src/scripts/ingest-jung-texts-optimized.ts",
+    "ingest-jung-stream": "node --expose-gc --max-old-space-size=2048 -r tsx/cjs src/scripts/ingest-jung-stream.ts",
+    "test:rag-api": "tsx src/scripts/test-rag-api.ts",
+    "test:rag-debug": "tsx src/scripts/test-rag-debug.ts"
   },
   "keywords": [
     "somni",
@@ -22,6 +27,7 @@
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.2.0",
     "@supabase/supabase-js": "^2.38.0",
+    "@xenova/transformers": "^2.17.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -29,6 +35,7 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "openai": "^5.3.0",
+    "tiktoken": "^1.0.21",
     "winston": "^3.11.0",
     "zod": "^3.22.4"
   },
