--- a/package.json
+++ b/package.json
@@ -40,14 +40,16 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.10",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.0.0",
     "jest": "^29.7.0",
+    "ts-jest": "^29.4.0",
     "tsx": "^4.6.0",
     "typescript": "^5.3.0"
   },
