--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,9 @@ ENABLE_RAG_MARY=true
 
 # Debug Features
 SHOW_DEBATE_PROCESS=false # Show internal debate process in test mode
+
+# Dream Title Generation
+ENABLE_TITLE_GENERATION=true # Enable automatic dream title generation (default: true)
+TITLE_GENERATION_MODEL=meta-llama/llama-4-scout:free # Model to use for title generation
+TITLE_GENERATION_MAX_TOKENS=20 # Maximum tokens for title generation
+TITLE_GENERATION_TEMPERATURE=0.7 # Temperature for title generation (0-1)
