testing image gen

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,11 @@ OPENROUTER_API_KEY=your_openrouter_api_key
 # ElevenLabs Configuration (for TTS)
 ELEVENLABS_API_KEY=your_elevenlabs_api_key
 
+# ImageRouter Configuration (for AI image generation)
+IMAGEROUTER_API_KEY=your_imagerouter_api_key
+IMAGE_PRIMARY_MODEL=google/gemini-2.0-flash-exp:free
+IMAGE_FALLBACK_MODEL=black-forest-labs/FLUX-1-schnell:free
+
 # Feature Flags
 ENABLE_RAG=false # Set to true to enable RAG features
 ENABLE_RAG_JUNG=true # Enable RAG for Jung interpreter (if ENABLE_RAG=true)
@@ -28,3 +33,8 @@ ENABLE_TITLE_GENERATION=true # Enable automatic dream title generation (default:
 TITLE_GENERATION_MODEL=meta-llama/llama-4-scout:free # Model to use for title generation
 TITLE_GENERATION_MAX_TOKENS=20 # Maximum tokens for title generation
 TITLE_GENERATION_TEMPERATURE=0.7 # Temperature for title generation (0-1)
+
+# Dream Image Generation
+ENABLE_IMAGE_GENERATION=true # Enable automatic dream image generation (default: true)
+SCENE_DESCRIPTION_MAX_TOKENS=100 # Maximum tokens for scene description
+SCENE_DESCRIPTION_TEMPERATURE=0.8 # Temperature for scene description (0-1)
