--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@elevenlabs/elevenlabs-js": "^2.2.0",
     "@supabase/supabase-js": "^2.38.0",
     "@xenova/transformers": "^2.17.2",
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "esbuild": "^0.25.5",
