--- a/railway.toml
+++ b/railway.toml
@@ -6,5 +6,5 @@ buildCommand = "npm run build"
 startCommand = "npm run start"
 healthcheckPath = "/health"
 healthcheckTimeout = 30
-restartPolicyType = "on-failure"
+restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 5
