--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test": "jest",
     "lint": "eslint src/**/*.ts",
     "type-check": "tsc --noEmit",
-    "ingest-jung": "tsx src/scripts/ingest-jung-texts.ts",
-    "ingest-jung-optimized": "node --expose-gc -r tsx/cjs src/scripts/ingest-jung-texts-optimized.ts",
-    "ingest-jung-stream": "node --expose-gc --max-old-space-size=2048 -r tsx/cjs src/scripts/ingest-jung-stream.ts",
+    "ingest-jung": "tsx src/scripts/rag/ingest-jung-texts.ts",
+    "ingest-jung-optimized": "node --expose-gc -r tsx/cjs src/scripts/rag/ingest-jung-texts-optimized.ts",
+    "ingest-jung-stream": "node --expose-gc --max-old-space-size=2048 -r tsx/cjs src/scripts/rag/ingest-jung-stream.ts",
+    "ingest-jung-enhanced": "node --expose-gc --max-old-space-size=2048 -r tsx/cjs src/scripts/rag/ingest-jung-stream-enhanced.ts",
+    "ingest-jung-bge": "node --expose-gc --max-old-space-size=3072 -r tsx/cjs src/scripts/rag/ingest-jung-stream-bge.ts",
     "ingest-freud": "node --expose-gc -r tsx/cjs src/scripts/ingest-freud-texts.ts",
     "ingest-freud-single": "node --expose-gc -r tsx/cjs src/scripts/ingest-single-freud-text.ts",
     "ingest-mary": "node --expose-gc -r tsx/cjs src/scripts/rag/ingest-mary-texts.ts",
@@ -20,7 +22,21 @@
     "test:rag-debug": "tsx src/scripts/test-rag-debug.ts",
     "test:freud-rag": "tsx src/scripts/test-freud-rag.ts",
     "setup:image-bucket": "tsx src/scripts/setup-image-bucket.ts",
-    "test:image-generation": "tsx src/scripts/test-image-generation.ts"
+    "test:image-generation": "tsx src/scripts/test-image-generation.ts",
+    "ingest-knowledge": "node --expose-gc -r tsx/cjs src/scripts/rag/ingest-knowledge-base.ts",
+    "test:ingestion": "tsx src/scripts/rag/test-ingestion.ts",
+    "test:rag-retrieval": "tsx src/scripts/rag/test-rag-retrieval.ts",
+    "debug:rag": "tsx src/scripts/rag/debug-rag-system.ts",
+    "test:hybrid-rag": "tsx src/scripts/rag/test-hybrid-rag.ts",
+    "ingest-themes-bge": "npx tsx src/scripts/ingest-themes-bge-simple.ts",
+    "migrate:bge-m3": "tsx src/scripts/rag/migrate-to-bge-m3.ts",
+    "reingest:bge-m3": "node --expose-gc -r tsx/cjs src/scripts/rag/reingest-with-bge.ts",
+    "test:bge-jung": "tsx src/scripts/rag/test-bge-jung.ts",
+    "test:bge-quality": "tsx src/scripts/rag/test-bge-quality-comprehensive.ts",
+    "check:kb": "tsx src/scripts/rag/check-knowledge-base.ts",
+    "inspect:bge": "tsx src/scripts/rag/inspect-bge-data.ts",
+    "test:dream-themes": "tsx src/scripts/test-dream-theme-analysis.ts",
+    "cleanup:384d": "tsx src/scripts/cleanup-384d-embeddings.ts"
   },
   "keywords": [
     "somni",
