Fix missing logger import and add SUPABASE_ANON_KEY to env.example

--- a/env.example
+++ b/env.example
@@ -23,6 +23,7 @@ COST_ALERT_THRESHOLD=10.0  # USD threshold for cost alerts
 # Supabase Configuration
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+SUPABASE_ANON_KEY=your_anon_key_here
 
 # Security Configuration
 API_SECRET_KEY=your_secure_random_string_32_chars_min
