--- a/package.json
+++ b/package.json
@@ -5,9 +5,17 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "dev:ws": "tsx watch src/server-with-websocket.ts",
     "build": "tsc",
     "start": "node dist/server.js",
+    "start:ws": "node dist/server-with-websocket.js",
     "test": "jest",
+    "test:websocket": "tsx src/test-websocket.ts",
+    "test:conversational-ws": "tsx src/conversational-ai/test-conversational-websocket.ts",
+    "setup:conversational-test": "tsx src/conversational-ai/test-setup.ts",
+    "test:ws-basic": "tsx src/conversational-ai/test-basic-websocket.ts",
+    "test:namespace": "tsx src/test-namespace-websocket.ts",
+    "test:namespace-simple": "node src/test-namespace-simple.js",
     "lint": "eslint src/**/*.ts",
     "type-check": "tsc --noEmit",
     "// === DREAM INTERPRETATION ===": "",
@@ -52,10 +60,12 @@
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.2.0",
     "@supabase/supabase-js": "^2.38.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/bull": "^3.15.9",
     "@types/jsonwebtoken": "^9.0.10",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.10.0",
+    "bcrypt": "^6.0.0",
     "bull": "^4.16.5",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -78,10 +88,12 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.10.0",
+    "@types/socket.io-client": "^1.4.36",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.0.0",
     "jest": "^29.7.0",
+    "socket.io-client": "^4.8.1",
     "ts-jest": "^29.4.0",
     "tsx": "^4.6.0",
     "typescript": "^5.3.0"
