basic conversational ai implementation

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ OPENROUTER_API_KEY=your_openrouter_api_key
 
 # ElevenLabs Configuration (for TTS)
 ELEVENLABS_API_KEY=your_elevenlabs_api_key
+ELEVENLABS_AGENT_ID_JUNG=jung_agent_id
 
 # ImageRouter Configuration (for AI image generation)
 IMAGEROUTER_API_KEY=your_imagerouter_api_key
