--- a/env.example
+++ b/env.example
@@ -4,6 +4,15 @@ NODE_ENV=development
 
 # ElevenLabs Configuration
 ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+ELEVENLABS_JUNG_AGENT_ID=agent_id_from_dashboard
+ELEVENLABS_FREUD_AGENT_ID=agent_id_from_dashboard
+ELEVENLABS_MARY_AGENT_ID=agent_id_from_dashboard
+ELEVENLABS_LAKSHMI_AGENT_ID=agent_id_from_dashboard
+
+# ElevenLabs Session Configuration
+ELEVENLABS_SESSION_SECRET=random_32_char_string_for_jwt_signing
+ELEVENLABS_SESSION_EXPIRY=3600
+ELEVENLABS_SUPPORTS_SIGNED_URLS=false
 
 # OpenRouter Configuration
 OPENROUTER_API_KEY=your_openrouter_api_key_here
