fix: add missing environment variables to config schema
- Add JWT_SECRET to config validation and exports
- Add all ELEVENLABS_AGENT_ID_* variables to config schema
- Update code to use config object instead of direct process.env access
- Fix variable scope issues in error handling
- This should resolve 500 errors in ElevenLabs initialization

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,14 @@ OPENROUTER_API_KEY=your_openrouter_api_key
 # ElevenLabs Configuration (for TTS)
 ELEVENLABS_API_KEY=your_elevenlabs_api_key
 ELEVENLABS_AGENT_ID_JUNG=jung_agent_id
+ELEVENLABS_AGENT_ID_FREUD=freud_agent_id
+ELEVENLABS_AGENT_ID_MARY=mary_agent_id
+ELEVENLABS_AGENT_ID_LAKSHMI=lakshmi_agent_id
+ELEVENLABS_SESSION_EXPIRY=3600
+ELEVENLABS_SUPPORTS_SIGNED_URLS=false
+
+# JWT Configuration
+JWT_SECRET=your_jwt_secret_key
 
 # ImageRouter Configuration (for AI image generation)
 IMAGEROUTER_API_KEY=your_imagerouter_api_key
